--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "dor mesilati",
   "license": "ISC",
@@ -21,7 +22,7 @@
     "socket.io": "^3.0.4"
   },
   "engines": {
-    "node": "10.x",
+    "node": "'14.15.0'",
     "npm": "6.14.8"
   }
 }
