--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "jquery": "^3.5.1",
     "mongoose": "^5.11.8",
     "nodemon": "^2.0.6",
+    "passport": "^0.4.1",
     "socket.io": "^3.0.4"
   },
-
+  
   "engines": {
     "node": "14.15.0",
     "npm": "6.14.8"
