--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "connect-mongo": "^3.2.0",
     "connect-mongodb-session": "^2.4.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-socket.io-session": "^1.3.5",
@@ -21,7 +23,6 @@
     "passport": "^0.4.1",
     "socket.io": "^3.0.4"
   },
-  
   "engines": {
     "node": "14.15.0",
     "npm": "6.14.8"
