--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_URL = 'mongodb://localhost:27017/checkers_game'
+DB_URL = "mongodb+srv://dor:2of10I7Ny0DB8tFg@cluster0.rsh71.mongodb.net/checkers_game?retryWrites=true&w=majority"
